add a selected list of airports, refactor js so that clicking the list items is the same as changing the select menu

--- a/Map.html
+++ b/Map.html
@@ -65,7 +65,7 @@
             
             <div id="airport-data">
                 <div id="airport-controls">        
-                    Airports: <select id="airport-list">
+                    All Airports: <select id="airport-list">
                     </select>
                 </div>
                 
@@ -86,6 +86,11 @@
                         <div id="setting-lat"></div>
                         <div id="setting-long"></div>
                     </div>
+                </div>
+
+                <div id="airport-recents">
+                  <span>Selected Airports:</span>
+                  <ul id="airport-recents-list"></ul>
                 </div>
             </div>
         </div>
