--- a/Map.html
+++ b/Map.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Map Sample</title>
+        <!-- JS -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-        <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE&callback=initMap"></script>
-        <script src="siteData.js"></script>
+        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB5LLab6EoT9QxaWktx2SBHI8gC-H19GU8&callback=initMap"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha256-KXn5puMvxCw+dAYznun+drMdG1IFl3agK0p/pqT9KAo= sha512-2e8qq0ETcfWRI4HJBzQiA3UoyFk6tbNyG+qSaIBZLyW9Xf3sWZHN/lxe9fTh1U45DpPf07yj94KsUHHWe4Yk1A==" crossorigin="anonymous"></script>
+        <script src="siteData.js"></script>    
         <script src="Map.js"></script>
+        <!-- CSS -->
+        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha256-7s5uDGW3AHqw6xtJmNNtr+OBRJUlgkNJEo78P4b0yRw= sha512-nNo+yCHEyn0smMxSswnf/OnX6/KwJuZTlNZBjauKhTK0c+zT+q5JOCx0UFhXQ6rJR9jg6Es8gPuD2uZcYDLqSw==" crossorigin="anonymous">
         <link href="Map.css" rel="stylesheet">
     </head>
     <body>
-        <h1>LLamasoft Map Exercise
-        </h1>
-
+        <div class="jumbotron"><h1>LLamasoft Map Exercise</h1></div>
+        <div class="container">
         <div id="exercise-description">
             <div id="instruction-toggle"><span>Instructions</span> <span id="exercise-toggle">-</span></div>
 
@@ -63,29 +68,22 @@
         </div>
         
         <div id="airport-data">
-            <div id="airport-controls">        
-                Airports: <select id="airport-list">
-                </select>
-            </div>
-            
-            <div id="airport-settings">
-                <div id="setting-name">
-                    <div>Code</div>
-                    <div>City</div>
-                    <div>State</div>
-                    <div>Full Name</div>
-                    <div>Latitude</div>
-                    <div>Longitude</div>
+            <form class="form-horizontal" role="form">
+                <div class="form-group">        
+                    <label class="control-label">Select an Airport</label>
+                    <select id="airport-list" class="form-control">
+                    </select>
+                    </label>
                 </div>
-                <div id="setting-value">
-                    <div id="setting-code"></div>
-                    <div id="setting-city"></div>
-                    <div id="setting-state"></div>
-                    <div id="setting-name"></div>
-                    <div id="setting-lat"></div>
-                    <div id="setting-long"></div>
+                <div class="form-group">
+                    <div class="checkbox">
+                    <label>
+                        <input type="checkbox" id="show-checkbox" checked="checked"> Show Info On Selection (otherwise, click the marker)
+                    </label>
+                    </div>
                 </div>
-            </div>
+            </form>
+        </div>
         </div>
     </body>
 </html>
