--- a/Map.html
+++ b/Map.html
@@ -4,7 +4,7 @@
         <title>Map Sample</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-        <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE&callback=initMap"></script>
+        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCqgK3gDxDGegBldLtK2boihhG4JQHfNrc&callback=initMap"></script>
         <script src="siteData.js"></script>
         <script src="Map.js"></script>
         <link href="Map.css" rel="stylesheet">
@@ -12,6 +12,11 @@
     <body>
         <h1>LLamasoft Map Exercise
         </h1>
+
+        <div class="airportList-new">
+            <h2 class="instructionText">Please select a state</h2>
+            <div class="reset_btn">Start Over</div>
+        </div>
 
         <div id="exercise-description">
             <div id="instruction-toggle"><span>Instructions</span> <span id="exercise-toggle">-</span></div>
