Cleaned up js and added comments. If you run this example, run in a localhost enviorment for the http request.

--- a/Map.html
+++ b/Map.html
@@ -6,7 +6,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCqgK3gDxDGegBldLtK2boihhG4JQHfNrc&callback=initMap"></script>
-    <script src="siteData.js"></script>
     <script src="Map.js"></script>
     <link href="Map.css" rel="stylesheet">
 </head>
@@ -38,16 +37,14 @@
         </div>
         <div class="container my-airports-container">
             <div class="my-airports section section-1">
-
+                <ol class="my-airport-list"></ol>
             </div>
-
             <div class="my-airports section section-2">
                 <div id="airport-map">
 
                 </div>
 
             </div>
-
         </div>
     </div>
 
