--- a/Map.html
+++ b/Map.html
@@ -5,7 +5,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCqgK3gDxDGegBldLtK2boihhG4JQHfNrc&callback=initMap"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCqgK3gDxDGegBldLtK2boihhG4JQHfNrc&callback=mapControls.initMap"></script>
     <script src="Map.js"></script>
     <link href="Map.css" rel="stylesheet">
 </head>
