--- a/Map.html
+++ b/Map.html
@@ -4,10 +4,12 @@
         <title>Map Sample</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-        <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE&callback=initMap"></script>
+        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCmOrTwg_RRgyCWw2JxGm9VWhQd-YQV2Vw&callback=initMap"></script>
         <script src="siteData.js"></script>
         <script src="Map.js"></script>
+        <script src="ext/jquery-ui.js"></script>
         <link href="Map.css" rel="stylesheet">
+        <link href="ext/jquery-ui.css" rel="stylesheet" />
     </head>
     <body>
         <h1>LLamasoft Map Exercise
@@ -63,11 +65,6 @@
         </div>
         
         <div id="airport-data">
-            <div id="airport-controls">        
-                Airports: <select id="airport-list">
-                </select>
-            </div>
-            
             <div id="airport-settings">
                 <div id="setting-name">
                     <div>Code</div>
@@ -81,10 +78,22 @@
                     <div id="setting-code"></div>
                     <div id="setting-city"></div>
                     <div id="setting-state"></div>
-                    <div id="setting-name"></div>
+                    <div id="setting-fullname"></div>
                     <div id="setting-lat"></div>
                     <div id="setting-long"></div>
                 </div>
+                <div id="settings-instructions">Click marker to show/hide this info</div>
+            </div>
+            <div id="airport-controls">        
+                Airports: <select id="airport-list">
+                </select>
+            </div>  
+            <div id="airport-controls-find">Not listed above? Enter alternate code:
+                <input type="text" id="searchCode"/>
+                <span id="alternateCodeSearch" class="ui-icon ui-icon-search"></span>
+            </div>
+            <div>
+                <button id="removeMarkersBtn">Remove markers</button>
             </div>
         </div>
     </body>
