--- a/Map.html
+++ b/Map.html
@@ -4,16 +4,17 @@
         <title>Map Sample</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-        <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE&callback=initMap"></script>
+        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD_oDAzQqN9eMu5AvAszsLraT3sFyjwBEE&callback=initMap"></script>
         <script src="siteData.js"></script>
         <script src="Map.js"></script>
         <link href="Map.css" rel="stylesheet">
     </head>
     <body>
-        <h1>LLamasoft Map Exercise
-        </h1>
 
         <div id="exercise-description">
+		
+		<h1>LLamasoft Map Exercise
+        </h1>
             <div id="instruction-toggle"><span>Instructions</span> <span id="exercise-toggle">-</span></div>
 
             <div id="exercise-instructions">
@@ -66,6 +67,7 @@
             <div id="airport-controls">        
                 Airports: <select id="airport-list">
                 </select>
+				<button id="toggleBtn" type="button">Toggle Marker</button>
             </div>
             
             <div id="airport-settings">
@@ -81,7 +83,7 @@
                     <div id="setting-code"></div>
                     <div id="setting-city"></div>
                     <div id="setting-state"></div>
-                    <div id="setting-name"></div>
+                    <div id="setting-fullname"></div>
                     <div id="setting-lat"></div>
                     <div id="setting-long"></div>
                 </div>
