Added bootstrap and moved the scripts to the body.

--- a/Map.html
+++ b/Map.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Map Sample</title>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCOFRdhRc-G-Tdi9eYKr-bHmLvAwjtQTdI&callback=initMap"></script>
-        <script src="siteData.js"></script>
-        <script src="Map.js"></script>
+        <title>zhiggins Map Exercise</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
         <link href="Map.css" rel="stylesheet">
     </head>
     <body>
@@ -87,5 +84,13 @@
                 </div>
             </div>
         </div>
+        
+        <!-- Script section -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCOFRdhRc-G-Tdi9eYKr-bHmLvAwjtQTdI&callback=initMap"></script>
+        <script src="siteData.js"></script>
+        <script src="Map.js"></script>
     </body>
 </html>
