--- a/Map.html
+++ b/Map.html
@@ -88,5 +88,22 @@
         <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCOFRdhRc-G-Tdi9eYKr-bHmLvAwjtQTdI&callback=initMap"></script>
         <script src="siteData.js"></script>
         <script src="Map.js"></script>
+        
+        <!-- Handlebars templates -->
+        <script id="airport-list-item-template" type="text/x-handlebars-template">
+            <span class="list-group-item clearfix airport-list-item" data-code="{{Code}}">
+                <span class="pull-right">
+                    <button class="btn btn-xs btn-danger" data-delete="{{Code}}">
+                        <i class="fa fa-times"></i>
+                    </button>
+                    </span>
+                <h4 class="list-group-item-heading">{{FullSiteNameAbbr}}</h4>
+                <p class="list-group-item-text">
+                    <strong>Code:</strong> {{Code}}<br>
+                    <strong>City:</strong> {{City}}, {{State}}<br>
+                    <strong>Lat:</strong> {{Latitude}} <strong>Lon:</strong> {{Longitude}}
+                </p>
+            </span>
+        </script>
     </body>
 </html>
