Added the ability to select an added airport and center the map on its marker.  Newly added airports now start as selected, unselecting any currently-selected airport.

--- a/Map.html
+++ b/Map.html
@@ -91,7 +91,7 @@
         
         <!-- Handlebars templates -->
         <script id="airport-list-item-template" type="text/x-handlebars-template">
-            <span class="list-group-item clearfix airport-list-item" data-code="{{Code}}">
+            <span class="list-group-item clearfix airport-list-item active" data-code="{{Code}}">
                 <span class="pull-right">
                     <button class="btn btn-xs btn-danger" data-delete="{{Code}}">
                         <i class="fa fa-times"></i>
