--- a/Map.html
+++ b/Map.html
@@ -63,22 +63,21 @@
         
         <div class="container">
         <div class="row">
-            <div class="col-md-3 sidebar">
+            <div id="sidebar" class="col-md-3 sidebar">
                 <div class="row">
                     <select id="airport-list" class="form-control"></select>
                 </div>
-                <div class="row">
+                <div id="listGroupContainer" class="row">
                     <div class="list-group" id="selected-airport-list">
                     </div>
                 </div>
-                </div>
-                <div class="col-md-9 col-md-offset-3 main nopadding">
+            </div>
+            <div class="col-md-9 col-md-offset-3 main nopadding">
                 <div id="airport-map-container">
                     <div id="airport-map"></div>
                 </div>
-                </div>
             </div>
-        </div>      
+        </div>   
         
         <!-- Script section -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
