Added a handlebars template for the select list items to clean up the javascript.

--- a/Map.html
+++ b/Map.html
@@ -107,5 +107,9 @@
                 </p>
             </span>
         </script>
+        
+        <script id="select-list-item-template" type="text/x-handlebars-template">
+            <option value="{{Code}}">{{Code}} - {{City}}</option>
+        </script>
     </body>
 </html>
