--- a/Map.html
+++ b/Map.html
@@ -32,7 +32,7 @@
                                 </p>
 
                                 <p>
-                                    Currently this page loads a list of airports into a drop down. You can select an airport and it&#39;s code and city will
+                                    Currently this page loads a list of airports into a drop down. You can select an airport and its code and city will
                                     display in the data table. A marker will be placed on the map displaying the airport.
                                     If you roll your mouse over the marker the airport&#39;s code will be displayed.
                                 </p>
@@ -105,17 +105,17 @@
     <!-- Handlebars templates -->
     <script id="airport-list-item-template" type="text/x-handlebars-template">
         <span class="list-group-item clearfix airport-list-item active" data-code="{{Code}}">
-                <span class="pull-right">
-                    <button class="btn btn-xs btn-danger" data-delete="{{Code}}">
-                        <i class="fa fa-times"></i>
-                    </button>
-                    </span>
-        <h4 class="list-group-item-heading">{{FullSiteNameAbbr}}</h4>
-        <p class="list-group-item-text">
-            <strong>Code:</strong> {{Code}}<br>
-            <strong>City:</strong> {{City}}, {{State}}<br>
-            <strong>Lat:</strong> {{Latitude}} <strong>Lon:</strong> {{Longitude}}
-        </p>
+            <span class="pull-right">
+                <button class="btn btn-xs btn-danger" data-delete="{{Code}}">
+                    <i class="fa fa-times"></i>
+                </button>
+            </span>
+            <h4 class="list-group-item-heading">{{FullSiteNameAbbr}}</h4>
+            <p class="list-group-item-text">
+                <strong>Code:</strong> {{Code}}<br>
+                <strong>City:</strong> {{City}}, {{State}}<br>
+                <strong>Lat:</strong> {{Latitude}} <strong>Lon:</strong> {{Longitude}}
+            </p>
         </span>
     </script>
 
