Adds map data to JS file, changes id in div tag to better identify the JS query

--- a/Map.html
+++ b/Map.html
@@ -81,7 +81,7 @@
                     <div id="setting-code"></div>
                     <div id="setting-city"></div>
                     <div id="setting-state"></div>
-                    <div id="setting-name"></div>
+                    <div id="setting-fullname"></div>
                     <div id="setting-lat"></div>
                     <div id="setting-long"></div>
                 </div>
