--- a/Map.html
+++ b/Map.html
@@ -2,9 +2,10 @@
 <html>
     <head>
         <title>Map Sample</title>
+
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-        <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE&callback=initMap"></script>
+        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDMUlVhbmlTewA8sqJPGY29YiqvhimJnp4&callback=initMap"></script>
         <script src="siteData.js"></script>
         <script src="Map.js"></script>
         <link href="Map.css" rel="stylesheet">
@@ -88,4 +89,5 @@
             </div>
         </div>
     </body>
+    
 </html>
