fixed multiple InfoWindow issue

--- a/Map.html
+++ b/Map.html
@@ -54,7 +54,7 @@
                         <li>Better space utilization with table on right-hand side of page</li>
                         <li>Improved UX (instructions, updated and sorted dropdown, clearer layout)</li>
                         <li>Functionality to remove marker with double click</li>
-                        <li>Functionality to display InfoWindow on click</li>
+                        <li>Functionality to display InfoWindow on click.  <span class="update">No more than one InfoWindow will display at once.</span></li>
                         <li>Auto-zoom on airport selection</li>
                         <li><span class="update">Database fixes - removed state name from several city items in the sites array, removed unnecessary clutter (e.g. "AIRPORT_DTW")</span></li>
                     </ul>
