fixed collapsable instructions

--- a/Map.html
+++ b/Map.html
@@ -52,7 +52,7 @@
                     <ul>
                         <li>Responsive, bootstrapped project</li>
                         <li>Better space utilization with table on right-hand side of page</li>
-                        <li>Improved UX (instructions, updated and sorted dropdown, clearer layout)</li>
+                        <li>Improved UX (<span class="update">clearly labeled collapsable instructions</span>, updated and sorted dropdown, clearer layout)</li>
                         <li>Functionality to remove marker with double click</li>
                         <li>Functionality to display InfoWindow on click.  <span class="update">No more than one InfoWindow will display at once.</span></li>
                         <li>Auto-zoom on airport selection</li>
