--- a/Map.html
+++ b/Map.html
@@ -143,7 +143,7 @@
                             &nbsp;Map Demo &nbsp;<!-- a href="#menu-toggle" class="btn btn-default" >Toggle Sidebar</a -->
                         </h1>
                         <!-- you can use tables or divs for the overall layout -->
-                        <div id="map_canvas"></div>
+                        <div id="map_container"></div>
                     </div>
                 </div>
             </div>
