--- a/Map.html
+++ b/Map.html
@@ -8,16 +8,16 @@
         <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDzzWIA7ZNG2OBqohquK_FP5vBRMr2Ltac&callback=initMap"></script>
         <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/css/select2.min.css" rel="stylesheet" />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.min.js"></script>
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css" rel="stylesheet">
         <script src="siteData.js"></script>
         <script src="Map.js"></script>
         <link href="Map.css" rel="stylesheet">
 
     </head>
     <body>
+      <div class="container">
         <h1>LLamasoft Map Exercise
         </h1>
-        <ul id="selectedAirports">
-        </ul>
 
         <div id="exercise-description">
             <div id="instruction-toggle"><span>Instructions</span> <span id="exercise-toggle">-</span></div>
@@ -64,6 +64,8 @@
             </p>
             </div>
         </div>
+        <ul id="selectedAirports">
+        </ul>
         <div>
           Airports: <select class="js-example-basic-single" id="airport-list">
           </select>
@@ -74,6 +76,8 @@
         </div>
         <div id="airport-map">
         </div>
+      </div>
+
 
 
 
