--- a/Map.html
+++ b/Map.html
@@ -18,19 +18,25 @@
 
       <div id="mySidenav" class="sidenav">
         <div>
+          <div class="showOnQuery">
+            Airports:
+          </div>
+          <div id="title">
           <h1>Choose your airports: </h1>
+        </div>
           <select class="js-example-basic-single" id="airport-list">
           </select>
             <button id="removeAllMarkers" class="button-primary">reset</button>
         </div>
+        <div class="hideOnQuery">
         <ul id="selectedAirports">
         </ul>
-
+        <div class="footer">
+          Designed by Jennifer Kron
+        </div>
       </div>
 
-        <div id ="sidebar">
-
-        </div>
+      </div>
 
 
         <div id="map-canvas">
