fully operational, needs styling

--- a/Map.html
+++ b/Map.html
@@ -69,7 +69,8 @@
                 <br>
                 Airports by City: <select id="airport-by-City"></select>
             </div>
-            
+            <br>
+            <button id="locate">Locate this Airport</button>
             <div id="airport-settings">
                 <div id="setting-name">
                     <div>Code</div>
@@ -88,6 +89,11 @@
                     <div id="setting-long"></div>
                 </div>
             </div>
+            <h2>Selected Airports:</h2>
+            <p>Click the airport code below to view it on the map</p>
+            <ul id="code-list">
+                
+            </ul>
         </div>
     </body>
 </html>
