--- a/Map.html
+++ b/Map.html
@@ -10,6 +10,9 @@
         <script src="js/siteData.js"></script>
         <script src="js/Map.js"></script>
         <script src="js/mapController.js"></script>
+        <script>
+        window.init = { sites: sites};
+        </script>
         
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link href="css/theme.min.css" rel="stylesheet">
@@ -25,16 +28,17 @@
             <p class="navbar-text">Airport:</p>
 			<form class="navbar-form navbar-left form-inline">
 				<div class="form-group">
-					<select class="form-control" id="airport-list"></select>
+				    <select class="form-control" id="airport-list" ng-change="controller.airportSelected()"  ng-options="item as item.Code for item in controller.airports track by item.Code" ng-model="controller.airport"></select>
 				</div>
 			</form>
-			<p class="navbar-text">City: <span></span></p>
-			<p class="navbar-text">Code: <span ng-bind="controller.airport.code"></span></p>
+            <p class="navbar-text">Code: <span ng-bind="controller.airport.Code"></span></p>
+			<p class="navbar-text">City: <span ng-bind="controller.airport.City"></span><span ng-show="controller.airport.State != null">(<span ng-bind="controller.airport.State"></span>)</span> 
+			</p>
 		</div>
 		<div class="container">
-		  <p class="navbar-text">Full Name:<span></span></p>
-		  <p class="navbar-text">Latitude:<span></span></p>
-		  <p class="navbar-text">Longitude:<span></span></p>
+		  <p class="navbar-text">Full Name: <span ng-bind="controller.airport.FullSiteName"></span></p>
+		  <p class="navbar-text">Latitude: <span ng-bind="controller.airport.Latitude"></span></p>
+		  <p class="navbar-text">Longitude: <span ng-bind="controller.airport.Longitude"></span></p>
 		</div>
 	</nav>
 
