--- a/Map.html
+++ b/Map.html
@@ -3,7 +3,6 @@
     <head>
         <title>Map Sample</title>
         
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
         <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAbxW-M77Nmvs332i1lJgl_PSpWlpy3P1M&callback=initMap"></script>
@@ -19,7 +18,7 @@
         <link href="css/theme.min.css" rel="stylesheet">
         <link href="css/Map.css" rel="stylesheet">
     </head>
-    <body ng-controller="MapController as controller">
+    <body id="main" ng-controller="MapController as controller">
 	<nav class="navbar navbar-inverse navbar-fixed-top">
 		<div class="container">
 			<div class="navbar-header">
