commit: delete selected airport

--- a/Map.html
+++ b/Map.html
@@ -88,7 +88,7 @@
                     <div>Latitude</div>
                     <div>Longitude</div>
                     <div>
-						<button id="deleteB" type="button" class="btn btn-danger btn-xs">
+						<button id="delete" type="button" class="btn btn-danger btn-xs">
 							<span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Remove Pin
 						</button>                    
                     </div>
