uploaded css, html, and js files
Changes made: (also see comments in each files)
html: added buttons to delete/hide/show markers 
js: rewrote addMarker function, added show/clear/delete/setMap functions for button actions. Use an array to sort data. Include the rest of airport data.
css: added mark-panel but decided not to use later

To answer the questions in the html file. Some more things to think about...

- We are constantly struggling with displaying as much data as simply and streamlined as possible. Is there something you can do with the layout to show the same information using less screen real estate? 
Ari: Ideas like layer with tabs or floating info boxes may be helpful.
- Regarding markers, what happens with the existing code when you select an item multiple times? 
Ari: A duplicate markers are added when select an airport multiple times.
- If a user selects an airport that is not currently shown on the map, how do they find it? Can you make this easier? 
Ari: We can center, zoom, and

--- a/Map.html
+++ b/Map.html
@@ -4,7 +4,7 @@
         <title>Map Sample</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-        <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE&callback=initMap"></script>
+        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh1NBEHLMRnHbTK1666sM3sZdiXzA_rUk&callback=initMap"></script>
         <script src="siteData.js"></script>
         <script src="Map.js"></script>
         <link href="Map.css" rel="stylesheet">
@@ -66,8 +66,13 @@
             <div id="airport-controls">        
                 Airports: <select id="airport-list">
                 </select>
+               <!--- add buttons for operation---> 
+             <input onclick="deleteAMarker();" type=button value="Delete This Marker">
+             <input onclick="clearMarkers();" type=button value="Hide All Markers">
+     	     <input onclick="showMarkers();" type=button value="Show All Markers">
+             <input onclick="deleteMarkers();" type=button value="Delete All Markers">
             </div>
-            
+              
             <div id="airport-settings">
                 <div id="setting-name">
                     <div>Code</div>
@@ -81,7 +86,7 @@
                     <div id="setting-code"></div>
                     <div id="setting-city"></div>
                     <div id="setting-state"></div>
-                    <div id="setting-name"></div>
+                    <div id="setting-portname"></div>
                     <div id="setting-lat"></div>
                     <div id="setting-long"></div>
                 </div>
