--- a/Map.html
+++ b/Map.html
@@ -11,7 +11,7 @@
 	
 	<body>
 		<!--
-			Create a typical 3 column layout with Bootstrap and add content accordingly.
+			Create a typical layout with Bootstrap and add content accordingly.
 			Note:
 			I like leaving empty div's to be clear that the number of columns sum to 12. This is alternative to using col-*-offset-*.
 			It improves the readability of the html.
@@ -29,11 +29,11 @@
 				</div>
 			</div> <!-- end row 1 -->
 			
+			<!-- This looks the cleanest with two size 6 columns -->
 			<div class="row margin-strip shifted-down-sm">
 				<div class="col-sm-6">
 					<div class="row margin-strip">
 						<div class="col-xs-12 skinny-padding">
-							
 							<div class="form-group">
 								<label for="airport-list">Airports</label>
 								<select id="airport-list" class="color-override form-control input-sm"></select>
@@ -153,7 +153,6 @@
 		</div>
 	
 		<!-- Third party libraries -->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
