Added remaining fields to airport information table. Hiding intructions initially.

--- a/Map.html
+++ b/Map.html
@@ -8,7 +8,7 @@
 <body>
 <h1>LLamasoft Map Exercise</h1>
 <div id="exercise-description">
-    <div id="instruction-toggle"><span>Instructions</span><span id="exercise-toggle">-</span></div>
+    <div id="instruction-toggle"><span>Instructions</span><span id="exercise-toggle">+</span></div>
     <div id="exercise-instructions">
         <p>
             In helping clients understand their supply chains, maps are an important visualization tool.
