--- a/Map.html
+++ b/Map.html
@@ -2,11 +2,12 @@
 <html>
 <head>
     <title>Map Sample</title>
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Sans+Extra+Condensed">
     <link rel="stylesheet" href="Map.css">
 </head>
 <body>
-<h1>LLamasoft Map Exercise</h1>
+<!--<h1>LLamasoft Map Exercise</h1>-->
 <div id="exercise-description">
     <div id="instruction-toggle"><span>Instructions</span><span id="exercise-toggle">+</span></div>
     <div id="exercise-instructions">
@@ -50,9 +51,16 @@
 </div>
 <div id="airport-map"></div>
 <div id="airport-data">
-    <div id="airport-controls">
-        <label for="airport-list">Airports:</label>
-        <select id="airport-list"></select>
+    <div id="airport-details">
+        <div id="airport-header">
+            <span>Airport Information</span>
+        </div>
+        <div id="airport-controls">
+            <!--<label for="airport-list">Airport:</label>-->
+            <select id="airport-list" title="List of Available Airports"></select>
+            <div class="button" id="removeMarkerButton" title="Remove the Selected Airport's Marker from the Map">Remove Marker</div>
+            <div class="button" id="goToMarkerButton" title="Center Map on Selected Airport">Go to Location</div>
+        </div>
     </div>
     <div class="table" id="airport-settings">
         <div class="row" id="setting-code">
@@ -81,10 +89,11 @@
         </div>
     </div>
 </div>
+<script src="js/secure.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAt-0-VZXh9gx5YNwh1Qu9oCCgBNUDjvl8&callback=initMap"></script>
-<script src="siteData.js"></script>
-<script src="Map.js"></script>
+<script src="js/siteData.js"></script>
+<script src="js/Map.js"></script>
 </body>
 </html>
