Created dictionary of markers so they can be removed later

--- a/Map.html
+++ b/Map.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <title>Map Sample</title>
-    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Sans+Extra+Condensed">
-    <link rel="stylesheet" href="Map.css">
+    <link rel="stylesheet" href="css/Map.css">
 </head>
 <body>
 <!--<h1>LLamasoft Map Exercise</h1>-->
