Moved information to infowindow. Full functionality.

--- a/Map.html
+++ b/Map.html
@@ -56,34 +56,32 @@
             <span>Airport Information</span>
         </div>
         <div id="airport-controls">
-            <!--<label for="airport-list">Airport:</label>-->
             <select id="airport-list" title="List of Available Airports"></select>
             <div class="button" id="removeMarkerButton" title="Remove the Selected Airport's Marker from the Map">Remove Marker</div>
-            <div class="button" id="goToMarkerButton" title="Center Map on Selected Airport">Go to Location</div>
         </div>
     </div>
     <div class="table" id="airport-settings">
-        <div class="row" id="setting-code">
+        <div class="row code" id="setting-code">
             <div class="cell field">Code</div>
             <div class="cell value"></div>
         </div>
-        <div class="row" id="setting-city">
+        <div class="row city" id="setting-city">
             <div class="cell field">City</div>
             <div class="cell value"></div>
         </div>
-        <div class="row" id="setting-state">
+        <div class="row state" id="setting-state">
             <div class="cell field">State</div>
             <div class="cell value"></div>
         </div>
-        <div class="row" id="setting-name">
+        <div class="row name" id="setting-name">
             <div class="cell field">Full Name</div>
             <div class="cell value"></div>
         </div>
-        <div class="row" id="setting-lat">
+        <div class="row latitude" id="setting-lat">
             <div class="cell field">Latitude</div>
             <div class="cell value"></div>
         </div>
-        <div class="row" id="setting-long">
+        <div class="row longitude" id="setting-long">
             <div class="cell field">Longitude</div>
             <div class="cell value"></div>
         </div>
