--- a/Map.html
+++ b/Map.html
@@ -4,6 +4,7 @@
     <title>Map Sample</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Sans+Extra+Condensed">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel="stylesheet" href="css/Map.css">
 </head>
 <body>
@@ -49,15 +50,20 @@
         </p>
     </div>
 </div>
-<div id="airport-map"></div>
+<div id="content">
+    <div id="airport-map"></div>
+    <div id="airport-overlay">
+        <input type="text" id="airport-search" title="Airport Search" placeholder="Search Name or Location"/>
+        <ul id="search-results"></ul>
+    </div>
+</div>
 <div id="airport-data">
     <div id="airport-details">
-        <div id="airport-header">
-            <span>Airport Information</span>
-        </div>
+        <div id="airport-header">Airport Information</div>
         <div id="airport-controls">
             <select id="airport-list" title="List of Available Airports"></select>
-            <div class="button" id="removeMarkerButton" title="Remove the Selected Airport's Marker from the Map">Remove Marker</div>
+            <ul id="airport-list2"></ul>
+            <div class="button" id="remove-marker" title="Remove the Selected Airport's Marker from the Map">Remove Marker</div>
         </div>
     </div>
     <div class="table" id="airport-settings">
