--- a/Map.html
+++ b/Map.html
@@ -4,7 +4,7 @@
         <title>Map Sample</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-        <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE&callback=initMap"></script>
+        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDfq6Cskx1IG14Pl_aQz5Ga6g7uiypTRik&callback=initMap&libraries=places"></script>
         <script src="siteData.js"></script>
         <script src="Map.js"></script>
         <link href="Map.css" rel="stylesheet">
@@ -69,7 +69,7 @@
             </div>
             
             <div id="airport-settings">
-                <div id="setting-name">
+                <div id="setting-headers">
                     <div>Code</div>
                     <div>City</div>
                     <div>State</div>
