--- a/Map.html
+++ b/Map.html
@@ -4,7 +4,7 @@
         <title>Map Sample</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-        <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE&callback=initMap"></script>
+        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAIRWcHT1lImVPh8piVd4OMlpHNS5jrQeE&callback=initMap"></script>
         <script src="siteData.js"></script>
         <script src="Map.js"></script>
         <link href="Map.css" rel="stylesheet">
@@ -81,7 +81,7 @@
                     <div id="setting-code"></div>
                     <div id="setting-city"></div>
                     <div id="setting-state"></div>
-                    <div id="setting-name"></div>
+                    <div id="setting-fullname"></div>
                     <div id="setting-lat"></div>
                     <div id="setting-long"></div>
                 </div>
