--- a/Map.html
+++ b/Map.html
@@ -15,8 +15,8 @@
     <h1>LLamasoft Map Exercise
     </h1>
     <div id="exercise-description">
-        <div id="instruction-toggle"><span>Instructions</span> <span id="exercise-toggle">-</span></div>
-        <div id="exercise-instructions">
+        <div id="instruction-toggle"><span>Instructions</span> <span id="exercise-toggle">+</span></div>
+        <div id="exercise-instructions" style="display:none">
             <p>
                 In helping clients understand their supply chains, maps are an important visualization tool. In this exercise we would like you to take some steps to help make this map more useful. This example uses Google Maps and their maps API to show information about airports. While we do not use Google Maps and the maps API, the types of visualizations and map interactions you are allowed with Google Maps are common. In order to do this exercise you will need to get an API key for Google Maps if you do not already have one. Put the API key in the appropriate place in this file.
             </p>
