--- a/Map.html
+++ b/Map.html
@@ -63,13 +63,13 @@
         <div id="map">
             Airports:
             <div class="input-group">
-            <input type="text" class="form-control" id="city-input" list="city-list" placeholder="Enter a city..." onclick="loadSiteList"><datalist id="city-list"></datalist>
-            <span class="input-group-btn">
-                <button class="btn btn-success" type="button">Go!</button>
-            </span>
-        </div>
+                <input type="text" class="form-control" id="city-input" list="city-list" placeholder="Enter a city..."><datalist id="city-list"></datalist>
+                <span class="input-group-btn">
+                    <button class="btn btn-success" type="button">Go!</button>
+                </span>
+            </div>
             <p>Select an airport from the list and click the marker that appears to view information.<br>Double click a marker to remove it. </p>
-            <div id="airport-map">
+        <div id="airport-map">
 
         </div>
 
