--- a/Map.html
+++ b/Map.html
@@ -69,12 +69,11 @@
                     Airports: <select id="airport-list">
                     </select>
                 </div>
-                <div><button id="clearAll">Clear All Markers</button></div>
-                <p id="onMapList">Airports Marked on Map:</p>
-                <ol id="marked-airports"></ol>
+                <p><button id="clearAll">Clear All Markers</button></p>
+
                 
                 
-                <!--<div id="airport-settings">
+                <div id="airport-settings">
                     <div id="setting-name">
                         <div>Code</div>
                         <div>City</div>
@@ -91,7 +90,9 @@
                         <div id="setting-lat"></div>
                         <div id="setting-long"></div>
                     </div>
-                </div>-->
+                </div>
+                <p id="onMapList">Airports Marked on Map:</p>
+                <ol id="marked-airports"></ol>
             </div>
             <div id="airport-map">
             </div>
